--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "debug": "~2.6.9",
     "express": "~4.15.5",
     "knockout": "^3.4.2",
+    "mongodb": "^3.0.0-rc0",
     "morgan": "~1.9.0",
     "nodemon": "^1.12.5",
     "pug": "2.0.0-beta11",
-    "serve-favicon": "~2.4.5"
+    "serve-favicon": "~2.4.5",
+    "shortid": "^2.2.8"
   }
 }
